Disabled autoscroll into focused element. Fixed form layout on mobile devices

--- a/frontend/src/components/SignupForm/SignupForm.view.sass
+++ b/frontend/src/components/SignupForm/SignupForm.view.sass
@@ -81,7 +81,7 @@ $blue: #007bff
 		transition: opacity 500ms ease-in, max-height 500ms ease-in
 
 	.revealed
-		max-height: 100vh
+		max-height: 1000vh
 		opacity: 1
 		overflow: visible
 
